--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "foo"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Maala Mhrez <maala.m.mhrez@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -10,9 +10,14 @@ python = "3.11.*"
 uvicorn = "^0.18.3"
 gunicorn = "^20.1.0"
 sqlalchemy = "1.4.41"
-pytest = "^7.0.0"
-fastapi = "^0.78.0"
+fastapi = "^0.100.0"
+jsql = "0.6"
+moz-sql-parser = "^2.44.19084"
+mo-sql-parsing = "^8.146.22081"
+boltons = "18.0.1"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.0.0"
 
 [build-system]
 requires = ["poetry-core"]
