--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,14 @@ uvicorn = "^0.18.3"
 gunicorn = "^20.1.0"
 sqlalchemy = "1.4.41"
 fastapi = "^0.87.0"
-jsql = "0.6"
+jsql = "^0.8"
 moz-sql-parser = "^2.44.19084"
 mo-sql-parsing = "^8.146.22081"
 boltons = "18.0.1"
 httpx = "^0.24.1"
+mysqlclient = "^2.2.0"
+jinja2 = "^3.1.2"
+sentry-sdk = "^1.28.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
