--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ sentry-sdk = "^1.28.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
+pytest-xdist = "^3.3.1"
 
 [build-system]
 requires = ["poetry-core"]
