--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ httpx = "^0.24.1"
 mysqlclient = "^2.2.0"
 jinja2 = "^3.1.2"
 sentry-sdk = "^1.28.1"
+google-cloud-storage = "2.10.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
