--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
 - id: "PUSH DEPLOYMENT IMAGE"
   name: gcr.io/kaniko-project/executor:v0.20.0
   args:
-  - --destination=gcr.io/$PROJECT_ID/$_REPO:${COMMIT_SHA}
-  - --destination=gcr.io/$PROJECT_ID/$_REPO:${BRANCH_NAME}
+  - --destination=us-docker.pkg.dev/$PROJECT_ID/$_REPO:${COMMIT_SHA}
+  - --destination=us-docker.pkg.dev/$PROJECT_ID/$_REPO:${BRANCH_NAME}
   - --cache=true
   - --cache-ttl=6h
