--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,7 @@ substitutions:
 steps:
 
 - id: "PUSH DEPLOYMENT IMAGE"
-  name: gcr.io/kaniko-project/executor:v0.20.0
+  name: gcr.io/kaniko-project/executor:latest
   args:
   - --destination=gcr.io/$PROJECT_ID/$_REPO:${COMMIT_SHA}
   - --destination=gcr.io/$PROJECT_ID/$_REPO:${BRANCH_NAME}
