--- a/skaffold/app.yaml
+++ b/skaffold/app.yaml
@@ -1,26 +1,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: fooapp
+  name: htmltopdfapp
   labels:
-    app: fooapp
+    app: htmltopdfapp
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: fooapp
+      app: htmltopdfapp
   strategy:
     type: Recreate
   template:
     metadata:
-      name: fooapp
+      name: htmltopdfapp
       labels:
-        app: fooapp
+        app: htmltopdfapp
     spec:
       restartPolicy: Always
       containers:
-      - image: fooapp
-        name: fooapp
+      - image: htmltopdfapp
+        name: htmltopdfapp
         ports:
         - containerPort: 80
         imagePullPolicy: IfNotPresent
@@ -31,7 +31,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: fooapp
+  name: htmltopdfapp
   annotations:
     ingress.kubernetes.io/rewrite-target: "/"
 spec:
@@ -43,14 +43,14 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: fooapp
+            name: htmltopdfapp
             port:
               number: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: fooapp
+  name: htmltopdfapp
 spec:
   ports:
   - name: http
@@ -58,4 +58,4 @@ spec:
     protocol: TCP
     targetPort: 80
   selector:
-    app: fooapp
+    app: htmltopdfapp
