--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,4 @@
-substitutions:
+ubstitutions:
     _REPO: python-backend-boilerplate
 steps:
 
@@ -9,3 +9,5 @@ steps:
   - --destination=gcr.io/$PROJECT_ID/$_REPO:${BRANCH_NAME}
   - --cache=true
   - --cache-ttl=6h
+options:
+      logging: CLOUD_LOGGING_ONLY
